@@ -1,5 +1,6 @@
 package com.carrentalsystem.configuartion;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -7,9 +8,13 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
+
+    @Value("${frontend.url:http://localhost:5173}")
+    private String frontendUrl;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
@@ -17,11 +22,12 @@ public class CorsConfig {
         CorsConfiguration config = new CorsConfiguration();
 
         config.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5175",
-        		"http://localhost:5173",
+                frontendUrl,
+                "http://localhost:5173",
                 "http://localhost:5174",
-                 "http://localhost:5177",
+                "http://localhost:5175",
                 "http://localhost:5176",
+                "http://localhost:5177",
                 "http://localhost:5178"
         ));
 
@@ -29,7 +35,7 @@ public class CorsConfig {
                 "GET", "POST", "PUT", "DELETE", "OPTIONS"
         ));
 
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedHeaders(List.of("*"));
 
         config.setAllowCredentials(true);
 
@@ -39,4 +45,4 @@ public class CorsConfig {
 
         return source;
     }
-}
+}
